# agentsnap-py

./: README.md  pyproject.toml
src/agentsnap/: __init__.py  diff.py  format.py  pytest_plugin.py  recorder.py  snapshot.py
tests/: test_diff.py  test_recorder.py  test_snapshot.py
